Adapt Simple Injector's HttpRequestMessageProvider

--- a/test/Autofac.Integration.WebApi.Test/Autofac.Integration.WebApi.Test.csproj
+++ b/test/Autofac.Integration.WebApi.Test/Autofac.Integration.WebApi.Test.csproj
@@ -81,6 +81,7 @@
   <ItemGroup>
     <Compile Include="ActionFilterFixture.cs" />
     <Compile Include="ActionFilterWrapperFixture.cs" />
+    <Compile Include="AutofacHttpRequestMessageProviderFixture.cs" />
     <Compile Include="AutofacWebApiDependencyResolverFixture.cs" />
     <Compile Include="AutofacWebApiFilterProviderFixture.cs" />
     <Compile Include="AutofacWebApiModelBinderProviderFixture.cs" />
