Fixed #28: Alternative solution for injecting HttpRequestMessage without using ContainerBuilder.Update method.

--- a/src/Autofac.Integration.WebApi/Autofac.Integration.WebApi.csproj
+++ b/src/Autofac.Integration.WebApi/Autofac.Integration.WebApi.csproj
@@ -85,6 +85,7 @@
     <Compile Include="AuthorizationFilterOverrideWrapper.cs" />
     <Compile Include="ExceptionFilterOverrideWrapper.cs" />
     <Compile Include="HttpConfigurationExtensions.cs" />
+    <Compile Include="HttpRequestMessageProvider.cs" />
     <Compile Include="IAutofacAuthenticationFilter.cs" />
     <Compile Include="CurrentRequestHandler.cs" />
     <Compile Include="DependencyResolverExtensions.cs" />
