Fix for issue #30; do not invoke subsequent filters in OnActionExecutedAsync if response has been set by a prior filter

--- a/test/Autofac.Integration.WebApi.Test/Autofac.Integration.WebApi.Test.csproj
+++ b/test/Autofac.Integration.WebApi.Test/Autofac.Integration.WebApi.Test.csproj
@@ -91,6 +91,8 @@
     <Compile Include="TestTypes\InterfaceController.cs" />
     <Compile Include="TestTypes\IsAControllerNot.cs" />
     <Compile Include="TestTypes\Logger.cs" />
+    <Compile Include="TestTypes\TestActionFilter3.cs" />
+    <Compile Include="TestTypes\TestActionFilterWithResponse.cs" />
     <Compile Include="TestTypes\TestActionFilter.cs" />
     <Compile Include="TestTypes\TestActionFilter2.cs" />
     <Compile Include="TestTypes\TestAuthenticationFilter.cs" />
