--- a/test/Autofac.Integration.WebApi.Test/Autofac.Integration.WebApi.Test.csproj
+++ b/test/Autofac.Integration.WebApi.Test/Autofac.Integration.WebApi.Test.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Autofac.Integration.WebApi.Test</RootNamespace>
     <AssemblyName>Autofac.Integration.WebApi.Test</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <NoWarn>$(NoWarn);CS1591;SA1602;SA1611;CA1812</NoWarn>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\..\</SolutionDir>
@@ -55,6 +55,7 @@
     <Reference Include="System.IO.Compression" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Numerics" />
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
@@ -92,18 +93,18 @@
     <Compile Include="TestTypes\InterfaceController.cs" />
     <Compile Include="TestTypes\IsAControllerNot.cs" />
     <Compile Include="TestTypes\Logger.cs" />
+    <Compile Include="TestTypes\TestCallbackActionFilter.cs" />
     <Compile Include="TestTypes\TestActionFilter3.cs" />
     <Compile Include="TestTypes\TestActionFilterWithResponse.cs" />
     <Compile Include="TestTypes\TestActionFilter.cs" />
     <Compile Include="TestTypes\TestActionFilter2.cs" />
-    <Compile Include="TestTypes\TestAsyncContext.cs" />
     <Compile Include="TestTypes\TestAuthenticationFilter.cs" />
     <Compile Include="TestTypes\TestAuthenticationFilter2.cs" />
     <Compile Include="TestTypes\TestAuthorizationFilter.cs" />
     <Compile Include="TestTypes\TestAuthorizationFilter2.cs" />
     <Compile Include="TestTypes\TestCombinationFilter.cs" />
     <Compile Include="TestTypes\TestContinuationActionFilter.cs" />
-    <Compile Include="TestTypes\TestContinuationActionFilter2.cs" />
+    <Compile Include="TestTypes\TestContinuationActionFilterWithTransactionScope.cs" />
     <Compile Include="TestTypes\TestController.cs" />
     <Compile Include="TestTypes\TestControllerA.cs" />
     <Compile Include="TestTypes\TestControllerB.cs" />
@@ -113,8 +114,6 @@
     <Compile Include="TestTypes\TestModel1.cs" />
     <Compile Include="TestTypes\TestModel2.cs" />
     <Compile Include="TestTypes\TestModelBinder.cs" />
-    <Compile Include="TestTypes\TestOldActionFilterAsyncContextAccess.cs" />
-    <Compile Include="TestTypes\TestOldActionFilterLocalAsync.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\Autofac.Integration.WebApi\Autofac.Integration.WebApi.csproj">
