--- a/test/Autofac.Integration.WebApi.Test/Autofac.Integration.WebApi.Test.csproj
+++ b/test/Autofac.Integration.WebApi.Test/Autofac.Integration.WebApi.Test.csproj
@@ -126,7 +126,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Autofac">
-      <Version>5.0.0</Version>
+      <Version>6.0.0-develop-01132</Version>
     </PackageReference>
     <PackageReference Include="Castle.Core">
       <Version>4.3.1</Version>
