--- a/src/Autofac.Integration.WebApi/Autofac.Integration.WebApi.csproj
+++ b/src/Autofac.Integration.WebApi/Autofac.Integration.WebApi.csproj
@@ -1,138 +1,65 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8437DAE1-0F24-44A9-A187-B34F52858A58}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Autofac.Integration.WebApi</RootNamespace>
-    <AssemblyName>Autofac.Integration.WebApi</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFramework>net472</TargetFramework>
     <SignAssembly>true</SignAssembly>
+    <!-- VersionPrefix patched by AppVeyor -->
+    <VersionPrefix>0.0.1</VersionPrefix>
     <AssemblyOriginatorKeyFile>..\..\Autofac.snk</AssemblyOriginatorKeyFile>
-    <FileAlignment>512</FileAlignment>
-    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\..\</SolutionDir>
-    <RestorePackages>true</RestorePackages>
     <CodeAnalysisRuleSet>..\..\build\Analyzers.ruleset</CodeAnalysisRuleSet>
+    <RepositoryUrl>https://github.com/autofac/Autofac.WebApi</RepositoryUrl>
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <PackageIcon>icon.png</PackageIcon>
+    <PackageProjectUrl>https://autofac.org</PackageProjectUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageReleaseNotes>Release notes are at https://github.com/autofac/Autofac.WebApi/releases</PackageReleaseNotes>
+    <Features>IOperation</Features>
+    <PackageId>Autofac.WebApi2</PackageId>
+    <AssemblyName>Autofac.Integration.WebApi</AssemblyName>
+    <Company>Autofac Project - https://autofac.org</Company>
+    <Product>Autofac</Product>
+    <NeutralLanguage>en-US</NeutralLanguage>
+    <Description>Autofac Web API Integration</Description>
+    <Copyright>Copyright © 2014 Autofac Contributors</Copyright>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <CodeAnalysisRuleSet>../../build/Analyzers.ruleset</CodeAnalysisRuleSet>
     <EmbedAllSources>true</EmbedAllSources>
     <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
-    <Features>IOperation</Features>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;CODE_ANALYSIS</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Debug\Autofac.Integration.WebApi.xml</DocumentationFile>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE;CODE_ANALYSIS</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Release\Autofac.Integration.WebApi.xml</DocumentationFile>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.ComponentModel.Composition" />
-    <Reference Include="System.Core" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Net.Http" />
-  </ItemGroup>
-  <ItemGroup>
-    <CodeAnalysisDictionary Include="..\..\build\CodeAnalysisDictionary.xml">
-      <Link>CodeAnalysisDictionary.xml</Link>
-    </CodeAnalysisDictionary>
-    <Compile Include="AutofacActionFilterAdapter.cs" />
-    <Compile Include="ContinuationActionFilterOverrideWrapper.cs" />
-    <Compile Include="ContinuationActionFilterWrapper.cs" />
-    <Compile Include="AuthorizationFilterWrapper.cs" />
-    <Compile Include="AutofacFilterCategory.cs" />
-    <Compile Include="AutofacOverrideFilter.cs" />
-    <Compile Include="AutofacWebApiDependencyResolver.cs" />
-    <Compile Include="AutofacWebApiDependencyScope.cs" />
-    <Compile Include="AutofacWebApiFilterProvider.cs" />
-    <Compile Include="AutofacWebApiModelBinderProvider.cs" />
-    <Compile Include="ControllerTypeKey.cs" />
-    <Compile Include="AuthenticationFilterWrapper.cs" />
-    <Compile Include="AuthenticationFilterOverrideWrapper.cs" />
-    <Compile Include="AuthorizationFilterOverrideWrapper.cs" />
-    <Compile Include="ExceptionFilterOverrideWrapper.cs" />
-    <Compile Include="FilterPredicateMetadata.cs" />
-    <Compile Include="HttpConfigurationExtensions.cs" />
-    <Compile Include="HttpRequestMessageProvider.cs" />
-    <Compile Include="IAutofacContinuationActionFilter.cs" />
-    <Compile Include="IAutofacAuthenticationFilter.cs" />
-    <Compile Include="CurrentRequestHandler.cs" />
-    <Compile Include="DependencyResolverExtensions.cs" />
-    <Compile Include="ExceptionFilterWrapper.cs" />
-    <Compile Include="IAutofacActionFilter.cs" />
-    <Compile Include="IAutofacAuthorizationFilter.cs" />
-    <Compile Include="IAutofacExceptionFilter.cs" />
-    <Compile Include="FilterMetadata.cs" />
-    <Compile Include="AutofacControllerConfigurationAttribute.cs" />
-    <Compile Include="AutofacControllerConfigurationAttributeResources.Designer.cs">
+    
+  <ItemGroup>    
+    <Compile Update="AutofacControllerConfigurationAttributeResources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>AutofacControllerConfigurationAttributeResources.resx</DependentUpon>
     </Compile>
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RegistrationExtensions.cs" />
-    <Compile Include="RegistrationExtensionsResources.Designer.cs">
+    <Compile Update="RegistrationExtensionsResources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>RegistrationExtensionsResources.resx</DependentUpon>
     </Compile>
   </ItemGroup>
+
   <ItemGroup>
-    <EmbeddedResource Include="AutofacControllerConfigurationAttributeResources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>AutofacControllerConfigurationAttributeResources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-    <EmbeddedResource Include="RegistrationExtensionsResources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>RegistrationExtensionsResources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
+    <None Include="..\..\build\icon.png" Pack="true" PackagePath="\" />
   </ItemGroup>
+  
   <ItemGroup>
-    <None Include="Autofac.Integration.WebApi.nuspec" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Autofac">
-      <Version>5.2.0</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.AspNet.WebApi.Core">
-      <Version>5.2.0</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers">
-      <Version>2.6.1</Version>
+    <PackageReference Include="Autofac" Version="[5.0.0, 7.0.0)" />
+    <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="[5.2.0,6.0.0)" />    
+    <PackageReference Include="Newtonsoft.Json" Version="5.0.8" />
+    <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.0">
       <PrivateAssets>All</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta-62925-02" Condition="Exists('$(MSBuildThisFileDirectory)../../.git')">
+    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.3.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" Condition="Exists('$(MSBuildThisFileDirectory)../../.git')">
       <PrivateAssets>All</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="Newtonsoft.Json">
-      <Version>5.0.8</Version>
-    </PackageReference>
-    <PackageReference Include="StyleCop.Analyzers">
-      <Version>1.1.0-beta008</Version>
+    <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.113">
       <PrivateAssets>All</PrivateAssets>
     </PackageReference>
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
